--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.2.1",
     "indeed-scraper": "^3.1.4",
     "nodejs-web-scraper": "^6.1.0"
   }
